# Job_search

./: README.md  pyproject.toml  skill.md
src/job_search/: crew.py  main.py
src/job_search/config/: agents.yaml  tasks.yaml
src/job_search/tools/: search.py
