[tool.poetry]
name = "job_search"
version = "0.1.0"
description = "job_search using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
job_search = "src.job_search.main:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
